@@ -1,8 +1,8 @@
 
 .onLoad <- function(libname, pkgname ){
-    minversion <- packageDescription(pkgname, lib.loc=libname)$MinimumLibProtoVersion
-    minversion <- as.integer( gsub( "[[:space:]]+", "", minversion ) )
-    .Call( "check_libprotobuf_version", minversion, PACKAGE = "RProtoBuf" )
+    ##minversion <- packageDescription(pkgname, lib.loc=libname)$MinimumLibProtoVersion
+    ##minversion <- as.integer( gsub( "[[:space:]]+", "", minversion ) )
+    ##.Call( "check_libprotobuf_version", minversion, PACKAGE = "RProtoBuf" )
     readProtoFiles( package=pkgname, lib.loc=libname )
     attachDescriptorPool( pos = length(search()) )
 
